tests/rosetta/out/C/99-bottles-of-beer-2.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:36Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:36Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int fields(char *s) {
  list_string tmp1 = {0, NULL};
  int words = tmp1;
  const char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    const char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\n" || ch == "\t") {
      if (strlen(cur) > 0) {
        list_string tmp2 = list_string_create(1);
        tmp2.data[0] = cur;
        list_string tmp3 = concat_list_string(words, tmp2);
        words = tmp3;
        cur = "";
      }
    } else {
      char *tmp4 = concat_string(cur, ch);
      cur = tmp4;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = cur;
    list_string tmp6 = concat_list_string(words, tmp5);
    words = tmp6;
  }
  return words;
}

const char *join(list_string xs, char *sep) {
  const char *res = "";
  int i = 0;
  while (i < xs.len) {
    if (i > 0) {
      char *tmp7 = concat_string(res, sep);
      res = tmp7;
    }
    char *tmp8 = concat_string(res, xs.data[i]);
    res = tmp8;
    i = i + 1;
  }
  return res;
}

const char *numberName(int n) {
  list_string small = list_string_create(20);
  small.data[0] = "no";
  small.data[1] = "one";
  small.data[2] = "two";
  small.data[3] = "three";
  small.data[4] = "four";
  small.data[5] = "five";
  small.data[6] = "six";
  small.data[7] = "seven";
  small.data[8] = "eight";
  small.data[9] = "nine";
  small.data[10] = "ten";
  small.data[11] = "eleven";
  small.data[12] = "twelve";
  small.data[13] = "thirteen";
  small.data[14] = "fourteen";
  small.data[15] = "fifteen";
  small.data[16] = "sixteen";
  small.data[17] = "seventeen";
  small.data[18] = "eighteen";
  small.data[19] = "nineteen";
  int small = small;
  list_string tens = list_string_create(10);
  tens.data[0] = "ones";
  tens.data[1] = "ten";
  tens.data[2] = "twenty";
  tens.data[3] = "thirty";
  tens.data[4] = "forty";
  tens.data[5] = "fifty";
  tens.data[6] = "sixty";
  tens.data[7] = "seventy";
  tens.data[8] = "eighty";
  tens.data[9] = "ninety";
  int tens = tens;
  if (n < 0) {
    return "";
  }
  if (n < 20) {
    return small.data[n];
  }
  if (n < 100) {
    const char *t = tens.data[(int)((((double)n) / ((double)10)))];
    int s = n % 10;
    if (s > 0) {
      char *tmp9 = concat_string(t, " ");
      char *tmp10 = concat_string(tmp9, small.data[s]);
      t = tmp10;
    }
    return t;
  }
  return "";
}

const char *pluralizeFirst(char *s, int n) {
  if (n == 1) {
    return s;
  }
  int w = fields(s);
  if (w.len > 0) {
    char *tmp11 = concat_string(w.data[0], "s");
    char *tmp12 = concat_string(w.data[0], "s");
    w.data[0] = tmp12;
  }
  return join(w, " ");
}

int randInt(int seed, int n) {
  int next = (seed * 1664525 + 1013904223) % 2147483647;
  return next % n;
}

const char *slur(char *p, int d) {
  if (strlen(p) <= 2) {
    return p;
  }
  list_string tmp13 = {0, NULL};
  int a = tmp13;
  int i = 1;
  while (i < strlen(p) - 1) {
    list_string tmp14 = list_string_create(1);
    tmp14.data[0] = slice_string(p, i, i + 1);
    list_string tmp15 = concat_list_string(a, tmp14);
    a = tmp15;
    i = i + 1;
  }
  int idx = a.len - 1;
  int seed = d;
  while (idx >= 1) {
    seed = (seed * 1664525 + 1013904223) % 2147483647;
    if (seed % 100 >= d) {
      int j = seed % (idx + 1);
      const char *tmp = a.data[idx];
      a.data[idx] = a.data[j];
      a.data[j] = tmp;
    }
    idx = idx - 1;
  }
  const char *s = slice_string(p, 0, 1);
  int k = 0;
  while (k < a.len) {
    char *tmp16 = concat_string(s, a.data[k]);
    s = tmp16;
    k = k + 1;
  }
  s = s + slice_string(p, strlen(p) - 1, strlen(p));
  int w = fields(s);
  return join(w, " ");
}

int main() {
  int i = 99;
  while (i > 0) {
    printf("%s\n", slur(numberName(i), i) + " " +
                       pluralizeFirst(slur("bottle of", i), i) + " " +
                       slur("beer on the wall", i));
    printf("%s\n", slur(numberName(i), i) + " " +
                       pluralizeFirst(slur("bottle of", i), i) + " " +
                       slur("beer", i));
    printf("%s\n", slur("take one", i) + " " + slur("down", i) + " " +
                       slur("pass it around", i));
    printf("%s\n", slur(numberName(i - 1), i) + " " +
                       pluralizeFirst(slur("bottle of", i), i - 1) + " " +
                       slur("beer on the wall", i));
    i = i - 1;
  }
}

int main() {
  main();
  return 0;
}
